# Mandelbrot

./: CMakeLists.txt  kernel.cu  kernel.cuh  main.cpp  test.cuh  test.txt
bitmap/: pfc_base.h  pfc_bitmap_3.h  pfc_compiler_detection.h  pfc_libraries.h  pfc_macros.h  pfc_traits.h  pfc_types.h
misc/: pfc_random.h  pfc_threading.h  pfc_timing.h
pfc/: host_device_functions.h  pfc_random.h  pfc_threading.h  pfc_timing.h
